--- a/Authentication Server/Authentication Server.csproj
+++ b/Authentication Server/Authentication Server.csproj
@@ -51,7 +51,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="DBConnection.cs" />
+    <Compile Include="Database\DBConnection.cs" />
+    <Compile Include="Networking\NetServer.cs" />
+    <Compile Include="Networking\Packets.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Settings.Designer.cs">
@@ -59,7 +61,7 @@
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
       <DependentUpon>Settings.settings</DependentUpon>
     </Compile>
-    <Compile Include="Realm.cs" />
+    <Compile Include="Database\Realm.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
