--- a/Authentication Server/Authentication Server.csproj
+++ b/Authentication Server/Authentication Server.csproj
@@ -51,9 +51,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Database\Database.cs" />
     <Compile Include="Database\DBConnection.cs" />
+    <Compile Include="Networking\Handlers.cs" />
     <Compile Include="Networking\NetServer.cs" />
-    <Compile Include="Networking\Packets.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Settings.Designer.cs">
