Finishing up the Login procedure
+ GUIDs are now handled and stored on the Authentication Server.
+ GUIDs are removed from memory after 8 hours, meaning an authenticated
client has up to 8 hours to switch between servers should they want to.
+ Client receives Realm Data properly.
o Changed a few things around aestethically.

--- a/Authentication Server/Authentication Server.csproj
+++ b/Authentication Server/Authentication Server.csproj
@@ -51,8 +51,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Database\Database.cs" />
+    <Compile Include="Database\Data.cs" />
     <Compile Include="Database\DBConnection.cs" />
+    <Compile Include="Database\GUIDStore.cs" />
+    <Compile Include="Database\RealmList.cs" />
     <Compile Include="Networking\Handlers.cs" />
     <Compile Include="Networking\NetServer.cs" />
     <Compile Include="Networking\Packets.cs" />
@@ -64,7 +66,6 @@
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
       <DependentUpon>Settings.settings</DependentUpon>
     </Compile>
-    <Compile Include="Database\Realm.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
