--- a/Authentication Server/App.config
+++ b/Authentication Server/App.config
@@ -28,6 +28,9 @@
             <setting name="SqlPassword" serializeAs="String">
                 <value>12345</value>
             </setting>
+            <setting name="LogLevel" serializeAs="String">
+                <value>0</value>
+            </setting>
         </Authentication_Server.Properties.Settings>
     </userSettings>
 <system.data>
