--- a/Authentication Server/Properties/Settings.settings
+++ b/Authentication Server/Properties/Settings.settings
@@ -20,5 +20,8 @@
     <Setting Name="SqlPassword" Type="System.String" Scope="User">
       <Value Profile="(Default)">12345</Value>
     </Setting>
+    <Setting Name="LogLevel" Type="System.Int32" Scope="User">
+      <Value Profile="(Default)">0</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
