Created a Surface to render on
+ Created a basic render sequence.

--- a/Game Client/Game Client.csproj
+++ b/Game Client/Game Client.csproj
@@ -77,6 +77,8 @@
   <ItemGroup>
     <Compile Include="Database\Data.cs" />
     <Compile Include="Database\Realm.cs" />
+    <Compile Include="Graphics\D3DImageSlimDX.cs" />
+    <Compile Include="Graphics\D3DScene.cs" />
     <Compile Include="MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
     </Compile>
